# MiniRenderer

./: .gitignore  .gitmodules  Buffer.h  CMakeLists.txt  CUDA_Integration_Report.md  Camera.cpp  Camera.h  Color.h  ImageBuffer.h  Light.h  Math.cpp  Math.h  Mesh.cpp  Mesh.h  MiniRenderer.aps  MiniRenderer.cpp  MiniRenderer.rc  MiniRenderer.sln  MiniRenderer.vcxproj  MiniRenderer.vcxproj.filters  ObjLoader.cpp  ObjLoader.h  Object.cpp  Object.h  README.md  Ray.h  Renderer.cpp  Renderer.h  Scene.h  Vertex.h  build_cuda.bat  imgui.ini  resource.h
MiniRenderer/: MiniRenderer.sln  MiniRenderer.vcxproj
src/: BVH.h  Buffer.h  Camera.cpp  Camera.h  Color.h  CudaRenderer.cu  CudaRenderer.cuh  Debug.h  Intersection.h  Light.h  Line.h  Material.cpp  Material.h  Math.cpp  Math.h  Mesh.cpp  Mesh.h  MyMath.h  ObjLoader.cpp  ObjLoader.h  Object.cpp  Object.h  Ray.h  Renderer.cpp  Renderer.h  ResourceLoader.cpp  ResourceLoader.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  Triangle.cpp  Triangle.h  Vertex.h  cuda.py  cuda_transform_kernel.cu  main.cpp
